Add google analitycs

--- a/config.toml
+++ b/config.toml
@@ -11,3 +11,4 @@ theme= "greyshade"
   github_user="marcore"
   twitter_user="marcore78"
   linkedin_user="marcore1"
+  google_analytics_tracking_id="UA-65943188-1"
