Remove mail and change title

--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,11 @@
 baseurl = "http://www.marcore.it/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Marco Re"
 copyright = "© 2015 Marco Re"
 theme= "greyshade"
 [author]
   name = "Marco Re"
-  email= "mrc.re@tiscali.it"
+
 
 [params]
   github_user="marcore"
